se agrego div root al archivo html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Maquina de frases aleatoria</title>
 </head>
 <body>  
- 
+ <div id="root"></div>
   
     <div id="wrapper">
       <div id="quote-box">
