se actualizo el boton de icono de faccebok

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a
             class="button"
             id="tweet-quote"
-            title="Tweet this quote!"
+            title="Goglea esta cita"
             target="_top"
           >
             <i class="fa fa-twitter"></i>
@@ -31,10 +31,10 @@
           <a
             class="button"
             id="tumblr-quote"
-            title="Post this quote on tumblr!"
+            title="publica esta cita en Facebook"
             target="_blank"
           >
-            <i class="fa fa-tumblr"></i>
+            <i class="fa fa-facebook-official"aria-hidden="true"></i>
           </a>
           <button class="button" id="new-quote">Nueva frase</button>
         </div>
