se actualizo el boton de facebook y el botton de instagram

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <div class="buttons">
           <a
             class="button"
-            id="tweet-quote"
-            title="Goglea esta cita"
+            id="insta-quote"
+            title="Publica esta cita en instagram"
             target="_top"
           >
-            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
           </a>
           <a
             class="button"
-            id="tumblr-quote"
+            id="face-quote"
             title="publica esta cita en Facebook"
             target="_blank"
           >
