se actializo los id de los botones de face y de insta

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="buttons">
           <a
             class="button"
-            id="insta-quote"
+            id="inst-quote"
             title="Publica esta cita en instagram"
             target="_top"
           >
@@ -30,7 +30,7 @@
           </a>
           <a
             class="button"
-            id="face-quote"
+            id="fac-quote"
             title="publica esta cita en Facebook"
             target="_blank"
           >
