se actualizo el boton twuiter

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="buttons">
           <a
             class="button"
-            id="inst-quote"
-            title="Publica esta cita en instagram"
+            id="#tweet-quote"
+            title="tweetea la cita actual"
             target="_top"
           >
             <i class="fa fa-instagram" aria-hidden="true"></i>
