se elimino el boton de facebook

--- a/index.html
+++ b/index.html
@@ -23,19 +23,13 @@
           <a
             class="button"
             id="#tweet-quote"
-            title="tweetea la cita actual"
+            title="tuitea la cita actual"
             target="_top"
           >
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <i class="fa fa-twuitter-square"></i>
           </a>
-          <a
-            class="button"
-            id="fac-quote"
-            title="publica esta cita en Facebook"
-            target="_blank"
-          >
-            <i class="fa fa-facebook-official"aria-hidden="true"></i>
-          </a>
+          
+           
           <button class="button" id="new-quote">Nueva frase</button>
         </div>
       </div>
