se actualizo el codigo de el boton twuitter

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             title="tuitea la cita actual"
             target="_top"
           >
-            <i class="fa fa-twuitter-square"></i>
+            <i class="fa fa-twuitter"></i>
           </a>
           
            
