--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <title>Maquina de frases aleatoria</title>
 </head>
 <body>  
- <div id="root"></div>
-  
-    <div id="wrapper">
-      <div id="quote-box">
+ 
+  <div id="wrapper">
+         <div id="quote-box">
         <div class="quote-text">
           <i class="fa fa-quote-left"> </i><span id="text"></span>
         </div>
@@ -22,17 +21,24 @@
         <div class="buttons">
           <a
             class="button"
-            id="#tweet-quote"
-            title="tuitea la cita actual"
+            id="tweet-quote"
+            title="tuitear la cita actual"
             target="_top"
           >
-            <i class="fa fa-twuitter"></i>
+            <i class="fa fa-twitter"></i>
           </a>
-          
+          <a
+            class="button"
+            id="face-quote"
+            title="Postear esta cita en facebook!"
+            target="_blank"
+          >
+            <i class="fa fa-facebook"></i>
+          </a>         
            
           <button class="button" id="new-quote">Nueva frase</button>
-        </div>
-      </div>
+          </div>
+          </div>        
       <div class="footer">Hecho por <a href="https://github.com/LUISANGELMERIDA">Luis Angel</a></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
